@@ -1,4 +1,4 @@
-# $NetBSD: mi,v 1.564 2005/07/31 00:22:55 wiz Exp $
+# $NetBSD: mi,v 1.565 2005/07/31 19:26:06 xtraeme Exp $
 .						base-sys-root
 ./altroot					base-sys-root
 ./bin						base-sys-root
@@ -192,6 +192,7 @@
 ./sbin/rtsol					base-netutil-root	use_inet6
 ./sbin/savecore					base-sysutil-root
 ./sbin/scan_ffs					base-sysutil-root
+./sbin/scan_lfs					base-sysutil-root
 ./sbin/scsictl					base-sysutil-root
 ./sbin/setkey					base-netutil-root
 ./sbin/shutdown					base-sysutil-root
